[package]
name = "tuya-mqtt"
version = "0.5.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "=0.11.8"
rust-async-tuyapi = { version = "=1.0.0" }
tokio = { version = "=1.47.1", features = [
	"rt",
	"rt-multi-thread",
	"net",
	"time",
	"macros",
	"sync",
	"signal",
] }
serde = { version = "=1.0.219", features = ["derive"] }
serde_json = { version = "=1.0.142", features = ["preserve_order"] }
rumqttc = "=0.24.0"
anyhow = "=1.0.99"
palette = { version = "=0.7.6", features = ["serializing"] }
log = "=0.4.27"
futures = "=0.3.31"
config = "=0.15.14"
rand = "=0.8.5"
